--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
             const formData = new FormData(form);
 
             try {
-                const response = await fetch('http://localhost:5000/translate', {
+                const response = await fetch('http://139.84.163.45:5000//translate', {
                     method: 'POST',
                     body: formData
                 });
